--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /venv/
 __pycache__/
 *.pyc
+.env
 
 # Java / Gradle
 .gradle/
@@ -17,9 +18,11 @@ out/
 
 # Log files
 *.log
+gongsi-analyzer/logs/
 
 # 민감 정보 파일
 application-secret.yml
 
 # 빌드 결과물 및 데이터 디렉터리
 gongsi-analyzer/disclosures_data/
+/chroma_db/
